--- a/styles/local_leaders.css
+++ b/styles/local_leaders.css
@@ -1036,10 +1036,11 @@ html {
 
 .play-button {
   display: inline;
+  float: left;
   height: 36px;
   width: 39px;
   margin-right: 10px;
-  /*margin-bottom: 20px;*/
+  margin-bottom: 20px;
 }
 
 .note {
