--- a/styles/what_is_pathway.css
+++ b/styles/what_is_pathway.css
@@ -1035,10 +1035,11 @@ html {
 
 .play-button {
   display: inline;
+  float: left;
   height: 36px;
   width: 39px;
   margin-right: 10px;
-  /*margin-bottom: 20px;*/
+  margin-bottom: 20px;
 }
 
 .note {
